# agent-hub

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  MOBILE_APP_PLAN.md  README.md  index.html  mcp-bridge.cjs  package-lock.json  package.json  reconcile-prod.py
.github/workflows/: release.yml
mobile/: app.json  package-lock.json  package.json
mobile-web/: index.html  package-lock.json  package.json  vite.config.ts
mobile-web/src/: App.tsx  index.css
mobile-web/src/components/auth/: AuthFlow.tsx
mobile-web/src/components/chat/: ChatInput.tsx  ChatView.tsx  MessageBubble.tsx  MessageList.tsx
mobile-web/src/components/sessions/: SearchPanel.tsx  SessionCard.tsx  (+1 more)
mobile-web/src/services/: api.ts  websocket.ts
mobile-web/src/stores/: authStore.ts  globalStore.ts  index.ts  sessionStore.ts
mobile-web/src/types/: index.ts  message.ts  session.ts  websocket.ts
mobile/app/: _layout.tsx  index.tsx
mobile/app/(main)/: _layout.tsx  sessions.tsx  settings.tsx
mobile/app/auth/: _layout.tsx  connect.tsx  pairing.tsx  pin.tsx
mobile/components/auth/: PairingCodeInput.tsx  PinInput.tsx  ServerInput.tsx
mobile/components/chat/: ChatInput.tsx  ChatView.tsx  MessageBubble.tsx  MessageList.tsx  ThinkingIndicator.tsx
mobile/components/common/: EmptyState.tsx  ErrorView.tsx  LoadingScreen.tsx  StatusBar.tsx
mobile/components/sessions/: NewSessionModal.tsx  SessionCard.tsx  SessionList.tsx
mobile/services/: api.ts  storage.ts  websocket.ts
mobile/stores/: authStore.ts  chatStore.ts  sessionsStore.ts  settingsStore.ts
mobile/types/: api.ts  auth.ts  chat.ts  index.ts  session.ts
mobile/utils/: constants.ts  formatters.ts
scripts/: release.js
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/mobile-web-dist/: index.html
src-tauri/mobile-web-dist/assets/: index-0bosngCB.js  index-2n6ONaSH.css  index-A03qZd6-.js  index-BCm2_XAk.js  index-BSkJzrJB.css  index-BZMbwJkX.css  index-BfkBCee-.css  index-Bo3XNCHs.js  index-BpSy8jeP.js  index-C9YZJQgb.js  index-CT87QvWr.js  index-DNfwoUyK.js  index-Dl6e-pL2.css  index-DyaqAKxC.js  index-JGKhDQuC.js  index-kVUyuZJU.css  index-ogywpjr_.css  index-u_UfOqSK.css  index-vC12eudC.js  index-wFqLITnu.css
src-tauri/src/: lib.rs  mcp.rs  search.rs
(+1 files in other folders)
