[package]
name = "agent-hub"
version = "0.1.0"
description = "Agent Hub - Terminal session manager for AI agents"
authors = ["James Billinger"]
edition = "2021"

[lib]
name = "agent_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1.19"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
base64 = "0.22"

# HTTP server for remote access
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"

